<resources>
    <string name="app_name">NicoACG</string>
    <string name="please_input_privacy_protection">请输入原始密码</string>
    <string name="pwd_input_privacy_protection">请输入隐私密码</string>
    <string name="pwd_input_again_exit">再按一次退出</string>
    <string name="pwd_input_error_msg">您已输错%1$d次，还有%2$d次机会</string>
    <string name="del">删除</string>
    <string name="browse_string">发现</string>
    <string name="watch_string">关注</string>
    <string name="follow_string">+关注</string>
    <string name="mine">我的</string>
    <string name="collect">收藏</string>
    <string name="watch_interest_title_msg">我的兴趣</string>
    <string name="preview_comment_hint">评论区由我来守护...</string>
    <string name="foot_no_more_msg">没有了哦！~</string>
    <string name="foot_refresh_pulling_msg">上拉加载更多</string>
    <string name="foot_refresh_release_msg">释放立即加载</string>
    <string name="foot_refresh_loading_msg">正在加载</string>
    <string name="foot_refresh_refreshing_msg">正在刷新</string>
    <string name="foot_refresh_finish_msg">加载完成</string>
    <string name="foot_refresh_failed_msg">加载失败</string>
    <string name="home_first_page_toast_msg">前面没有了，往后滑吧</string>
    <string name="home_work_removed_msg">该作品已下架!</string>
    <string name="send_msg">发送</string>
    <string name="account_disable_1">账号禁言中,无法进行回复!</string>
    <string name="account_disable_2">账号封停中,无法观看作品!</string>
    <string name="reply_title_msg">%1$s条回复</string>
    <string name="reply_list_head_title_msg">全部回复</string>
    <string name="favorited_btn_msg">已收藏</string>
    <string name="favorit_btn_msg">收藏</string>
    <string name="reply_btn_msg">评论</string>
    <string name="forward_btn_msg">分享</string>
    <string name="work_details_waring_msg">本站内容均来源于用户分享，如有不当内容请联系我们。</string>
    <string name="dialog_freeze_coin_title_msg">VIP每日50次免费特权已用完</string>
    <string name="dialog_freeze_coin_txt_msg">A币被冻结</string>
    <string name="dialog_freeze_coin_unused_msg">A币不足，立即充值</string>
    <string name="dialog_freeze_coin_unused_msg2">A币不足，首充得双倍A币</string>
    <string name="dialog_open_vip_msg">开通VIP免费观看</string>
    <string name="dialog_open_vip_msg2">开通VIP立享7.8折购买特权</string>
    <string name="dialog_open_vip_msg3">再过10天VIP免费观看</string>
    <string name="dialog_be_free_msg">再过15天免费看，提醒我</string>
    <string name="dialog_can_not_buy_msg">无法使用A币购买</string>
    <string name="home_preview_works_count_msg">图片%1$d张/视频%2$d个</string>
    <string name="home_preview_works_count_msg2">图片%1$d张</string>
    <string name="preview_login_msg">登录观看</string>
    <string name="preview_watch_msg">立即观看</string>
    <string name="comment_count_msg">%1$d条评论</string>
    <string name="comment_reply_count_msg">%1$d条回复</string>
    <string name="comment_no_reply_msg">回复</string>
    <string name="comment_reply_hint_msg">回复&#160;%1$s:</string>
    <string name="comment_dirver_msg">司机</string>
    <string name="comment_passenger_msg">乘客</string>
    <string name="work_details_comment_nothing_msg">评论区无人守护</string>
    <string name="work_details_toast_msg">正在使用VIP特权免费观看</string>
    <string name="preview_like_msg">赞</string>
    <string name="work_details_title_msg">作品详情</string>
    <string name="preview_title_msg">作品预览</string>
    <string name="buy_work_dialog_title_msg">购买该作品</string>
    <string name="buy_work_dialog_balance_msg">余额：%1$d</string>
    <string name="buy_work_dialog_prompt_msg">分享到QQ群/微信群&#160;获取免费A币&#160;&#160;></string>
    <string name="pic_hdv_toast_msg">图片较大，请耐心等待</string>
    <string name="buy_of_coin_dialog_title_msg">VIP每日50次免费特权已用完</string>
    <string name="buy_of_coin_dialog_balance_msg">A币余额：%1$s</string>
    <string name="buy_of_coin_dialog_btn_msg">使用%1$sA币购买</string>
    <string name="banned_title_msg">购买该作品</string>
    <string name="banned_waring_msg">该账号被封</string>
    <string name="viewer_msg">高清模式</string>
    <string name="video_player_end_msg">播放下一个</string>
    <string name="video_player_re_play_msg">重播</string>
    <string name="video_player_first_msg">播放第一个</string>
    <string name="video_buffing_msg">正在缓冲...</string>
    <string name="search_msg">搜索</string>
    <string name="cancel_msg">取消</string>
    <string name="confirm_msg">确定</string>
    <string name="search_hint_msg">搜索兴趣、作品、na号、用户</string>
    <string name="search_hot_key_msg">热门搜索</string>
    <string name="search_history_msg">搜索历史</string>
    <string name="search_clear_msg">清空</string>
    <string name="search_of_keyword_msg">搜索“%1$s”相关内容</string>
    <string name="search_result_all_msg">综合</string>
    <string name="search_result_hobby_msg">兴趣</string>
    <string name="search_result_users_msg">用户</string>
    <string name="search_result_with_hobby_msg">相关兴趣</string>
    <string name="search_result_with_users_msg">相关用户</string>
    <string name="search_result_with_works_msg">相关作品</string>
    <string name="more_msg">更多</string>
    <string name="clear_history_title_msg">确定清空搜索历史？</string>
    <string name="clear_history_waring_msg">清空后无法恢复？</string>
    <string name="not_found_search_string_msg">没有相关内容哦！~\n换个关键词再试试吧？</string>
    <string name="browse_recommend_msg">达人推荐</string>
    <string name="browse_hot_msg">热门兴趣</string>
    <string name="browse_follow_msg">+关注</string>
    <string name="browse_followed_msg">已关注</string>
    <string name="dialog_unfollow_msg">取消关注</string>
    <string name="dialog_unfollow_confirm_msg">确定不再关注此人?</string>
    <string name="share_msg">分享</string>
    <string name="share_title_right_msg">推广赚现金</string>
    <string name="share_wechat_msg">微信</string>
    <string name="share_friend_msg">朋友圈</string>
    <string name="share_qq_msg">QQ</string>
    <string name="share_qzone_msg">QQ空间</string>
    <string name="share_weibo_msg">微博</string>
    <string name="share_line_msg">LINE</string>
    <string name="share_twwiter_msg">Twwiter</string>
    <string name="share_facebook_msg">Facebook</string>
    <string name="share_messenger_msg">Messenger</string>
    <string name="share_whatsapp_msg">Whatsapp</string>
    <string name="share_link_msg">复制链接</string>
    <string name="share_more_msg">更多</string>
    <string name="loading_msg">正在拼命加载中...</string>
    <string name="not_login_title_msg">权限不足</string>
    <string name="not_login_waring_msg">游客无法使用高清模式，请先登录</string>
    <string name="not_login_btn_msg1">登录/注册</string>
    <string name="not_login_open_vip_waring_msg">开通VIP后即可使用高清模式</string>
    <string name="not_login_open_vip_btn_msg">开通VIP获得该特权</string>
    <string name="not_login_btn_msg2">稍后再说</string>
    <string name="play_video_3G_msg">正在使用流量播放</string>
    <string name="back_toast">再按一次退出程序</string>
    <string name="copy_na">na号已复制</string>
    <string name="new_version_title">发现新版本</string>
    <string name="new_version_update_btn">马上体验</string>
    <string name="new_version_cancel_btn">残忍拒绝</string>
    <string name="load_error_msg">请检查网络后重试</string>
    <string name="net_error">网络异常，请检查您的网络状态</string>
    <string name="re_load_msg">重新加载</string>
    <string name="nodata">没有了哦</string>
    <string name="must">必填</string>
    <string name="unlogin_attention">还没有登录哦！~</string>
    <string name="empty_data_detail">还没产生任何明细哦！~</string>
    <string name="empty_data_attention">还没有内容哦！~</string>
    <string name="empty_data_collect">还没有收藏内容哦！~</string>
    <string name="empty_data_attention_btn">去逛逛</string>
    <string name="empty_attention_hint">你还没有关注任何人哦！~</string>
    <string name="empty_fans_hint">还没有人关注你哦！~</string>
    <string name="empty_userHome_hint">TA还没有发布作品哦！~</string>
    <string name="forgetPW">忘记密码？</string>
    <string name="hint_phoneNum">请输入手机号</string>
    <string name="hint_pw">请输入密码</string>
    <string name="login">登录</string>
    <string name="noAcount">没有帐号？</string>
    <string name="register">免费注册</string>
    <string name="title_register">注册</string>
    <string name="hint_code">请输入右边数字</string>
    <string name="sendSmsCode">发送验证码</string>
    <string name="register_hint_text1">注册即表示您已阅读并同意</string>
    <string name="register_protocol">《用户协议》</string>
    <string name="register_errorStr">验证码错误!</string>
    <string name="register_weclome">欢迎来到 NicoACG</string>
    <string name="mine_login_hint">登录解锁更多精彩内容 </string>
    <string name="mine_registerAndLogin">登录/注册</string>
    <string name="mine_signIn_hint">今日已签到</string>
    <string name="mine_signIn">每日签到</string>
    <string name="mine_beSignIn">已签到</string>
    <string name="mine_luck">幸运抽奖</string>
    <string name="mine_welfare">福利活动</string>
    <string name="mine_account">账户</string>
    <string name="mine_account_frist">首充双倍A币</string>
    <string name="mine_earnings">收益</string>
    <string name="mine_collect">收藏</string>
    <string name="mine_set">设置</string>
    <string name="mine_vip_status_unOpen">未开通</string>
    <string name="mine_vip_status_open">到期</string>
    <string name="mine_vip_status_beOpen">已过期</string>
    <string name="mine_signIn_text1">获得1次抽奖机会</string>
    <string name="mine_signIn_text2">去抽奖</string>
    <string name="mine_signIn_text3">稍后抽奖</string>
    <string name="mine_compile">编辑</string>
    <string name="chooseDataList_title">你的国家</string>
    <string name="chooseDataList_select">搜索</string>
    <string name="verify_title">验证</string>
    <string name="verify_toRegister">进行验证</string>
    <string name="verify_phoneHint">提现需要你的手机号</string>
    <string name="verify_errorStr">验证码错误</string>
    <string name="verify_next">下一步</string>
    <string name="countTimer_timeHint">s后可重新发送验证码</string>
    <string name="countTimer_after">后</string>
    <string name="countTimer_sendCode">发送验证码</string>
    <string name="registerSet_title">设置密码</string>
    <string name="registerSet_errorStr">密码长度为6-12位</string>
    <string name="registerSet_registerStr">注册成功</string>
    <string name="registerSet_setPW">请输入设置密码(6-12位)</string>
    <string name="registerSet_setPWAgent">请再次确认密码</string>
    <string name="registerSet_nickname">昵称</string>
    <string name="registerSet_invitationCode">填邀请码得礼包（选填）</string>
    <string name="registerSet_errorHint">两次输入的密码不一致</string>
    <string name="registerSet_completeRegistert">完成注册</string>
    <string name="findPWSet_title">重置密码</string>
    <string name="findPWSet_setNewPW">请输入设置密码(6-12位)</string>
    <string name="findPWSet_setNewPWAgent">请再次确认密码</string>
    <string name="findPWSet_errorHint">两次输入的密码不一致</string>
    <string name="findPWSet_completeSet">完成设置</string>
    <string name="withdrawalStatus_status1">提现申请已提交</string>
    <string name="income_selectBank">请选择银行</string>
    <string name="income_currentBank">所属银行</string>
    <string name="income_cardNum">卡号</string>
    <string name="income_cardNum_hint">请输入卡号</string>
    <string name="income_name">名字</string>
    <string name="income_fristName">姓氏</string>
    <string name="income_addBank_hint">请确保信息填写正确，以免造成不必要的损失。</string>
    <string name="income_addBank_btn">确认添加</string>
    <string name="setting_input_oldPw">请输入旧密码</string>
    <string name="setting_input_newPw">请输入新密码</string>
    <string name="setting_input_agentPw">请再次确认新密码</string>
    <string name="setting_etPw_hint">两次输入的密码不一致</string>
    <string name="setting_etPw_complete">完成</string>
    <string name="history_diallog_title">确定清空浏览历史？</string>
    <string name="history_diallog_message">清空后无法恢复</string>
    <string name="creative_center_head_alls_msg">全部</string>
    <string name="creative_center_head_review_msg">审核中</string>
    <string name="creative_center_head_passed_msg">已通过</string>
    <string name="creative_center_head_unpass_msg">未通过</string>
    <string name="creative_center_head_draft_msg">草稿箱</string>
    <string name="dialog_certification_title_msg">需要先通过身份认证哦</string>
    <string name="dialog_certification_message_msg">你需要先通过原创作者认证之后才能投稿，投稿的作品售出后你将获得相应的收益</string>
    <string name="dialog_certification_confrim_msg">去认证</string>
    <string name="dialog_certification_cancel_msg">放弃投稿</string>
    <string name="dialog_creative_center_confrim_msg">确定删除作品?</string>
    <string name="dialog_creative_center_cancel_msg">删除后无法恢复</string>
</resources>