<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="30dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="30dp">


    <TextView
        android:id="@+id/not_login_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/not_login_title_msg"
        android:textColor="@color/gray_33"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/not_login_waring_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_login_waring_msg"
        android:textColor="@color/gray_999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/not_login_btn_1"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_blue_btn"
        android:text="@string/not_login_btn_msg1"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/not_login_btn_2"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_gray_bg3"
        android:text="@string/not_login_btn_msg2"
        android:textColor="@color/gray_999" />
</LinearLayout>
