<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/clear_history_title_msg"
        android:textColor="@color/black_333"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/clear_history_waring_msg"
        android:textColor="@color/gray_999"
        android:textSize="12sp" />

    <Button
        android:id="@+id/dialog_clear_history_confirm_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_pink_bg2"
        android:text="@string/confirm_msg"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/dialog_clear_history_cancel_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_gray_bg3"
        android:text="@string/cancel_msg"
        android:textColor="@color/gray_999"
        android:textSize="16sp" />
</LinearLayout>
