<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_creative_center_delete_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dialog_creative_center_confrim_msg"
        android:textColor="@color/black_333"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_creative_center_delete_message_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_creative_center_cancel_msg"
        android:textColor="@color/gray_999"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/dialog_creative_center_delete_confirm_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_pink_bg_5dp"
        android:gravity="center"
        android:text="@string/confirm_msg"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialog_creative_center_delete_cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_gary_bg_5dp"
        android:gravity="center"
        android:text="@string/cancel_msg"
        android:textColor="@color/gray_999"
        android:textSize="16sp" />


</LinearLayout>
