<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="15dp">

    <com.kcx.acg.views.view.NoteRadioGroup
        android:id="@+id/creative_center_head_radio_group"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/creative_center_head_alls_rb"
            style="@style/content_rb_style"
            android:layout_width="0dp"
            android:checked="true"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rb_bg1"
            android:text="@string/creative_center_head_alls_msg" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <RadioButton
            android:id="@+id/creative_center_head_review_rb"
            style="@style/content_rb_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rb_bg2"
            android:text="@string/creative_center_head_review_msg" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <RadioButton
            android:id="@+id/creative_center_head_passed_rb"
            style="@style/content_rb_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rb_bg2"
            android:text="@string/creative_center_head_passed_msg" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <RadioButton
            android:id="@+id/creative_center_head_unpass_rb"
            style="@style/content_rb_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rb_bg3"
            android:text="@string/creative_center_head_unpass_msg" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/creative_center_head_draft_rb"
            style="@style/content_rb_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_rb_bg3"
            android:text="@string/creative_center_head_draft_msg"
            android:visibility="gone" />
    </com.kcx.acg.views.view.NoteRadioGroup>

</LinearLayout>
